--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
         <path fill="url(#_Linear2)" d="M1690 0s-42.182 372.782-341 336c-298.818-36.782-466.852-265.409-693-161-226.148 104.409-350.389 405.447-147 722s193 303 193 303H0V0h1690z"/>
         <defs>
           <linearGradient id="_Linear1" x2="1" gradientTransform="matrix(1772.46 0 0 1235.99 160.542 598.996)" gradientUnits="userSpaceOnUse">
-            <stop offset="0" stop-color="#dcffd3"/>
-            <stop offset="1" stop-color="#63bb68"/>
+            <stop offset="0" stop-color="#adfffb"/>
+            <stop offset="1" stop-color="#6ac7c2"/>
           </linearGradient>
           <linearGradient id="_Linear2" x2="1" gradientTransform="matrix(1690 0 0 1200.08 0 600.042)" gradientUnits="userSpaceOnUse">
-            <stop offset="0" stop-color="#63bb68"/>
-            <stop offset="1" stop-color="rgb(36, 87, 59)"/>
+            <stop offset="0" stop-color="#67cadb"/>
+            <stop offset="1" stop-color="#6ac7c2"/>
           </linearGradient>
         </defs>
     </svg>
