Customization strategies, new content

--- a/index.html
+++ b/index.html
@@ -12,6 +12,35 @@
 </head>
 <body>
 
+
+
+<div class="personalization-container">
+    <!-- Btn-->
+    <button class="personalization-btn">
+        <div class="personalization-float-left">
+            <span>Personalization Strategies</span>
+            <small style="color: #7189bd; text-align:center;">For Cold Panel Recruitment</small>
+        </div>
+        <i class="material-icons"></i>
+      <div class="personalization-dropdown">
+        <p class="active">
+            <a href="#">Here are some things that might stick out on their LinkedIn:</a>
+            <br>
+            <small style="text-align:center;">Select an option to insert into template</small>
+        </p>
+        <ol class="personalization-list" style="padding: 0;">
+            <li value="1"><b>Extensive past work experience → </b>They’ve been in the industry or with their company for many years</li>
+            <li value="2"><b>Recommendation → </b>They’ve got a rec from someone that talks about skills relevant to the event/topic</li>
+            <li value="3"><b>Career Evolution → </b>They didn’t start our doing what they are now, and had a couple jobs in another role</li>
+            <li value="4"><b>Endorsed Skills → </b>They’ve got upwards of 20 endorsements for a RELEVANT (to the event) skill or two</li>
+            <li value="5"><b>‘About’ → </b>They’ve got relevant experience or skills listed in the section they wrote about themselves</li>
+            <li value="6"><b>Certifications → </b>They’ve got a RELEVANT (to the event) certification that they’ve completed</li>
+            <li value="7"><b>Interests → </b>They’re following a person/company/group that is interesting or out of the norm (ideally relevant to the event)</li>
+        </ol>
+      </div>
+    </button>
+  </div>
+
 <div id="main-container">
     <div id="frontpage-container">
 
@@ -42,11 +71,13 @@
                 <div id="message-type-search">
                     <select id="message-type" class="custom-select">
                         <option class="hide" selected="selected">Message Type</option>
-                        <option value="Panel Recruitment">Panel Recruitment</option>
-                        <option value="Registrant Recruitment">Registrant Recruitment</option>
-                        <option value="Registrant Communication">Registrant Communication</option>
-                        <option value="Client Communication">Client Communication</option>
-                        <option value="Sales Communication">Sales Communication</option>
+                        <option value="Past Attendee Panel Recruitment">👨‍🎓 Past Attendee Panel Recruitment</option>
+                        <option value="Opt-In Panel Recruitment">🤱 Opt-In Panel Recruitment</option>
+                        <option value="Panel Recruitment">👨‍🏫 Panel Recruitment</option>
+                        <option value="Registrant Recruitment">🕵 Registrant Recruitment</option>
+                        <option value="Registrant Communication">🤰 Registrant Communication</option>
+                        <option value="Client Communication">🤹 Client Communication</option>
+                        <option value="Sales Communication">🦸‍♀ Sales Communication</option>
                     </select>
                 </div>
             
