Past atendee RR and Opt-in RR added

--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                         <option class="hide" selected="selected">Message Type</option>
                         <option value="Past Attendee Panel Recruitment">👨‍🎓 Past Attendee Panel Recruitment</option>
                         <option value="Opt-In Panel Recruitment">🤱 Opt-In Panel Recruitment</option>
-                        <option value="Panel Recruitment">👨‍🏫 Panel Recruitment</option>
-                        <option value="Registrant Recruitment">🕵 Registrant Recruitment</option>
+                        <option value="Panel Recruitment">👨‍🏫 Cold Panel Recruitment</option>
+                        <option value="Past Attendee Registrant Recruitment">💂 Past Attendee Registrant Recruitment</option>
+                        <option value="Opt-In Registrant Recruitment">🕺 Opt-In Registrant Recruitment</option>
+                        <option value="Registrant Recruitment">🕵 Cold Registrant Recruitment</option>
                         <option value="Registrant Communication">🤰 Registrant Communication</option>
                         <option value="Client Communication">🤹 Client Communication</option>
                         <option value="Sales Communication">🦸‍♀ Sales Communication</option>
@@ -113,7 +115,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - Last updated 8/17/20</div>
+        <div class="last-updated">BDI Virtual Content Engine - Last updated 8/24/20</div>
     </div>
 
 
