--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     <link rel="icon" href="./assets/images/bdifavicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <!-- Theme included stylesheets -->
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
     <script src="//code.tidio.co/znd9c4hvxvj6usdenf6ijarup8shmzlg.js" async></script>
+    <!-- Include the Quill library -->
+    <script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
 </head>
 <body>
-
-
 
 <div class="personalization-container">
     <!-- Btn-->
     <button class="personalization-btn">
         <div class="personalization-float-left">
             <span>Personalization Strategies</span>
-            <small style="color: #7189bd; text-align:center;">For Cold Panel Recruitment</small>
+            <small style="color: #7189bd; text-align:center;">Personalization Templates Guide</small>
         </div>
         <i class="material-icons"></i>
       <div class="personalization-dropdown">
@@ -40,6 +43,7 @@
       </div>
     </button>
   </div>
+  
 
 <div id="main-container">
     <div id="frontpage-container">
@@ -71,6 +75,7 @@
                 <div id="message-type-search">
                     <select id="message-type" class="custom-select">
                         <option class="hide" selected="selected">Message Type</option>
+                        <option value="Registrant Recruitment Personalization">🏹 Registrant Recruitment Personalization</option>
                         <option value="Past Attendee Panel Recruitment">👨‍🎓 Past Attendee Panel Recruitment</option>
                         <option value="Opt-In Panel Recruitment">🤱 Opt-In Panel Recruitment</option>
                         <option value="Panel Recruitment">👨‍🏫 Cold Panel Recruitment</option>
@@ -115,7 +120,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - Last updated 8/24/20</div>
+        <div class="last-updated">BDI Virtual Content Engine - Last updated 8/25/20</div>
     </div>
 
 
@@ -134,10 +139,10 @@
         </defs>
     </svg>
 </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script> <!-- Underscore -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
-        <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3 -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> <!-- jQuery min -->
-        <script type="text/babel" src="./index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script> <!-- Underscore -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> <!-- jQuery min -->
+    <script type="text/babel" src="./index.js"></script>
 </body>
 </html>
