RR personalizations added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 <div id="message-type-search">
                     <select id="message-type" class="custom-select">
                         <option class="hide" selected="selected">Message Type</option>
-                        <option value="Registrant Recruitment Personalization">🏹 Registrant Recruitment Personalization</option>
+                        <option value="Panel Recruitment Personalization">🏆 Panel Recruitment Personalization</option>
+                        <option value="Registrant Recruitment Personalization">🏅 Registrant Recruitment Personalization</option>
                         <option value="Past Attendee Panel Recruitment">👨‍🎓 Past Attendee Panel Recruitment</option>
                         <option value="Opt-In Panel Recruitment">🤱 Opt-In Panel Recruitment</option>
                         <option value="Panel Recruitment">👨‍🏫 Cold Panel Recruitment</option>
@@ -120,7 +121,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - Last updated 8/25/20</div>
+        <div class="last-updated">BDI Virtual Content Engine - Last updated 8/26/20</div>
     </div>
 
 
