--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                         <option value="Panel Recruitment">👨‍🏫 Cold Panel Recruitment</option>
                         <option value="Past Attendee Registrant Recruitment">💂 Past Attendee Registrant Recruitment</option>
                         <option value="Opt-In Registrant Recruitment">🕺 Opt-In Registrant Recruitment</option>
-                        <option value="Registrant Recruitment">🕵 Cold Registrant Recruitment</option>
+                        <option value="Registrant Recruitment Legacy">🕵 Cold Registrant Recruitment LEGACY</option>
+                        <option value="Registrant Recruitment New">🕵 Cold Registrant Recruitment NEW</option>
                         <option value="Registrant Communication">🤰 Registrant Communication</option>
                         <option value="Client Communication">🤹 Client Communication</option>
                         <option value="Sales Communication">🦸‍♀ Sales Communication</option>
