--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li value="5"><b>‘About’ → </b>They’ve got relevant experience or skills listed in the section they wrote about themselves</li>
             <li value="6"><b>Certifications → </b>They’ve got a RELEVANT (to the event) certification that they’ve completed</li>
             <li value="7"><b>Interests → </b>They’re following a person/company/group that is interesting or out of the norm (ideally relevant to the event)</li>
+            <li value="8"><b>Last Resort → </b>I saw on LinkedIn that you’re the (TITLE) (COMPANY). I thought about reaching out to you on LinkedIn, but I wasn’t sure if you’re very active there — figured shooting you a quick email would be better.</li>
         </ol>
       </div>
     </button>
