--- a/index.html
+++ b/index.html
@@ -66,15 +66,17 @@
 
             <!-- CREATE A DRAFT -->
             <div id="draft-container" style="display: none;">
-                    <h2>Draft a Message</h2>
-                <div id="event-search">
-                    <select id="event-select" class="custom-select" >
-                         <option class="hide" selected="selected" placeholder="Event">Event</option>
+
+                <h2>Draft a Message</h2>
+
+                <div id="event-search" class="custom-select">
+                    <select id="event-select" class="select">
+                        <option class="hide" selected="selected" placeholder="Event">Event</option>
                     </select>
                 </div>
             
-                <div id="message-type-search">
-                    <select id="message-type" class="custom-select">
+                <div id="message-type-search" class="custom-select">
+                    <select id="message-type" class="select">
                         <option class="hide" selected="selected">Message Type</option>
                         <option value="Panel Recruitment Personalization">🏆 Panel Recruitment Personalization</option>
                         <option value="Registrant Recruitment Personalization">🏅 Registrant Recruitment Personalization</option>
@@ -91,8 +93,8 @@
                     </select>
                 </div>
             
-                <div id="message-name-search">
-                    <select id="message-name" class="custom-select">
+                <div id="message-name-search" class="custom-select">
+                    <select id="message-name" class="select">
                         <option class="hide" selected="selected">Outreach #</option>
                     </select>
                 </div>
@@ -123,7 +125,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - Last updated 9/18/20</div>
+        <div class="last-updated">BDI Virtual Content Engine - Last updated 9/21/20</div>
     </div>
 
 
