Added PR test category

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <option value="Past Attendee Panel Recruitment">👨‍🎓 Past Attendee Panel Recruitment</option>
                         <option value="Opt-In Panel Recruitment">🤱 Opt-In Panel Recruitment</option>
                         <option value="Panel Recruitment">👨‍🏫 Cold Panel Recruitment</option>
+                        <option value="Panel Recruitment TEST">👨‍🏫 Panel Recruitment TEST</option>
                         <option value="Past Attendee Registrant Recruitment">💂 Past Attendee Registrant Recruitment</option>
                         <option value="Opt-In Registrant Recruitment">🕺 Opt-In Registrant Recruitment</option>
                         <option value="Registrant Recruitment Legacy">🕵 Cold Registrant Recruitment LEGACY</option>
