New LinkedIn messages, edits from Phyllis, and removing moderator from panelist list

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Virtual Content Engine - BDI</title>
     <link rel="icon" href="./assets/images/bdifavicon.png" type="image/x-icon"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <!-- Theme included stylesheets -->
     <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
@@ -91,6 +91,7 @@
                         <option value="Registrant Communication">🤰 Registrant Communication</option>
                         <option value="Client Communication">🤹 Client Communication</option>
                         <option value="Sales Communication">🦸‍♀ Sales Communication</option>
+                        <option value="LinkedIn Campaigns">🎳 LinkedIn Campaigns</option>
                     </select>
                 </div>
             
@@ -122,11 +123,12 @@
     <div id="drafted-container">
         <i id="back-button" class="fa fa-arrow-circle-left"></i>
             <div id="drafts-outline">
+                <div id="drafts-breadcrumbs"></div>
                 <div id="drafts"></div>
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - Last updated 10/15/20</div>
+        <div class="last-updated">BDI Virtual Content Engine - Last updated 10/18/20</div>
     </div>
 
 
