--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - Last updated 10/20/20</div>
+        <div class="last-updated">BDI Virtual Content Engine - Last updated 10/26/20</div>
     </div>
 
 
@@ -149,9 +149,11 @@
     </svg>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script> <!-- Underscore -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
-    <script src="https://d3js.org/d3.v5.min.js"></script> <!-- D3 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script> <!-- Moment.js -->
+    <script src="https://momentjs.com/downloads/moment-timezone-with-data-1970-2030.min.js"></script> <!-- Moment Timezone with data -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> <!-- jQuery min -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
     <script type="text/babel" src="./index.js"></script>
+     <!-- <script src="https://d3js.org/d3.v5.min.js"></script>D3 -->
 </body>
 </html>
