Robots file and blocking meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <meta name="robots" content="noindex" />
+    <meta name="AdsBot-Google" content="noindex" />
+    <meta name="googlebot" content="noindex">
+    <meta name="googlebot-news" content="nosnippet">
+
     <title>Virtual Content Engine - BDI</title>
     <link rel="icon" href="./assets/images/bdifavicon.png" type="image/x-icon"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -128,7 +134,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - Last updated 4/23/21</div>
+        <div class="last-updated">BDI Virtual Content Engine - last edited on 4/23/21</div>
     </div>
 
     <svg id="backgroundDesign" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" preserveAspectRatio="xMidYMax slice" stroke-linejoin="round" stroke-miterlimit="1.41421" clip-rule="evenodd" viewBox="0 0 1920 1200">
