Message updates - copy testing

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                         <option value="Opt-In Panel Recruitment">🤱 Opt-In Panel Recruitment</option>
                         <option value="Panel Recruitment">👨‍🏫 Cold Panel Recruitment</option>
                         <option value="Panel Recruitment TEST">👨‍🏫 Panel Recruitment TEST</option>
+
+                        <option value="NEW COPY - Cold Panel Recruitment">👨‍🏫 NEW COPY - Cold Panel Recruitment</option>
+                        <option value="NEW COPY - Opt-in Panel Recruitment">👨‍🏫 NEW COPY - Opt-in Panel Recruitment</option>
+                        <option value="NEW COPY - Past Attendee Panel Recruitment">👨‍🏫 NEW COPY - Past Attendee Panel Recruitment</option>
+
                         <option value="Past Attendee Registrant Recruitment">💂 Past Attendee Registrant Recruitment</option>
                         <option value="Opt-In Registrant Recruitment">🕺 Opt-In Registrant Recruitment</option>
                         <option value="Registrant Recruitment Legacy">🕵 Cold Registrant Recruitment LEGACY</option>
@@ -134,7 +139,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - last edited on 6/03/21</div>
+        <div class="last-updated">BDI Virtual Content Engine - last edited on 7/15/21</div>
     </div>
 
     <svg id="backgroundDesign" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" preserveAspectRatio="xMidYMax slice" stroke-linejoin="round" stroke-miterlimit="1.41421" clip-rule="evenodd" viewBox="0 0 1920 1200">
