new RR messages

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
                         <option value="NEW COPY - Opt-in Panel Recruitment">👨‍🏫 NEW COPY - Opt-in Panel Recruitment</option>
                         <option value="NEW COPY - Past Attendee Panel Recruitment">👨‍🏫 NEW COPY - Past Attendee Panel Recruitment</option>
 
+                        <option value="NEW COPY - Cold Registrant Recruitment">👨‍🏫 NEW COPY - Cold Registrant Recruitment</option>
+                        <option value="NEW COPY - Opt-in Registrant Recruitment">👨‍🏫 NEW COPY - Opt-in Registrant Recruitment</option>
+                        <option value="NEW COPY - Past Attendee Registrant Recruitment">👨‍🏫 NEW COPY - Past Attendee Registrant Recruitment</option>
+
                         <option value="Past Attendee Registrant Recruitment">💂 Past Attendee Registrant Recruitment</option>
                         <option value="Opt-In Registrant Recruitment">🕺 Opt-In Registrant Recruitment</option>
                         <option value="Registrant Recruitment Legacy">🕵 Cold Registrant Recruitment LEGACY</option>
