--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div id="predraftHTML"></div>
             <div id="logo-container">
                 <div id="logo"></div>
-                <div class="logo-title"><b>Virtual Events</b></div>
+                <div class="logo-title"><b>Content Engine</b></div>
             </div>
         </div>
 
@@ -143,7 +143,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - last edited on 8/06/21</div>
+        <div class="last-updated">BDI Virtual Content Engine - last edited on 8/17/21</div>
     </div>
 
     <svg id="backgroundDesign" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" preserveAspectRatio="xMidYMax slice" stroke-linejoin="round" stroke-miterlimit="1.41421" clip-rule="evenodd" viewBox="0 0 1920 1200">
