--- a/index.html
+++ b/index.html
@@ -84,25 +84,30 @@
                 <div id="message-type-search" class="custom-select">
                     <select id="message-type" class="select">
                         <option class="hide" selected="selected">Message Type</option>
-                        <option value="Panel Recruitment Personalization">🏆 Panel Recruitment Personalization</option>
-                        <option value="Registrant Recruitment Personalization">🏅 Registrant Recruitment Personalization</option>
-                        <option value="Past Attendee Panel Recruitment">👨‍🎓 Past Attendee Panel Recruitment</option>
-                        <option value="Opt-In Panel Recruitment">🤱 Opt-In Panel Recruitment</option>
-                        <option value="Panel Recruitment">👨‍🏫 Cold Panel Recruitment</option>
-                        <option value="Panel Recruitment TEST">👨‍🏫 Panel Recruitment TEST</option>
+                        <option value="Panel Recruitment Personalization">Panel Recruitment Personalization</option>
+                        <option value="Registrant Recruitment Personalization">Registrant Recruitment Personalization</option>
 
-                        <option value="NEW COPY - Cold Panel Recruitment">👨‍🏫 NEW COPY - Cold Panel Recruitment</option>
-                        <option value="NEW COPY - Opt-in Panel Recruitment">👨‍🏫 NEW COPY - Opt-in Panel Recruitment</option>
-                        <option value="NEW COPY - Past Attendee Panel Recruitment">👨‍🏫 NEW COPY - Past Attendee Panel Recruitment</option>
+                        <option value="Panel Recruitment">Cold Panel Recruitment</option>
+                        <option value="Past Attendee Panel Recruitment">Past Attendee Panel Recruitment</option>
+                        <option value="Opt-In Panel Recruitment">Opt-In Panel Recruitment</option>
+                        <option value="Panel Recruitment TEST">Panel Recruitment TEST</option>
 
-                        <option value="Past Attendee Registrant Recruitment">💂 Past Attendee Registrant Recruitment</option>
-                        <option value="Opt-In Registrant Recruitment">🕺 Opt-In Registrant Recruitment</option>
-                        <option value="Registrant Recruitment Legacy">🕵 Cold Registrant Recruitment LEGACY</option>
-                        <option value="Registrant Recruitment New">🕵 Cold Registrant Recruitment NEW</option>
-                        <option value="Registrant Communication">🤰 Registrant Communication</option>
-                        <option value="Client Communication">🤹 Client Communication</option>
-                        <option value="Sales Communication">🦸‍♀ Sales Communication</option>
-                        <option value="LinkedIn Campaigns">🎳 LinkedIn Campaigns</option>
+                        <option value="Registrant Recruitment Legacy">Cold Registrant Recruitment LEGACY</option>
+                        <option value="Registrant Recruitment New">Cold Registrant Recruitment NEW</option>
+                        <option value="Past Attendee Registrant Recruitment">Past Attendee Registrant Recruitment</option>
+                        <option value="Opt-In Registrant Recruitment">Opt-In Registrant Recruitment</option>
+
+                        <option value="Registrant Communication">Registrant Communication</option>
+                        <option value="Client Communication">Client Communication</option>
+                        <option value="LinkedIn Campaigns">LinkedIn Campaigns</option>
+
+                        <option value="NEW COPY - Cold Panel Recruitment">NEW COPY - Cold Panel Recruitment</option>
+                        <option value="NEW COPY - Opt-in Panel Recruitment">NEW COPY - Opt-in Panel Recruitment</option>
+                        <option value="NEW COPY - Past Attendee Panel Recruitment">NEW COPY - Past Attendee Panel Recruitment</option>
+
+                        <option value="NEW COPY - Cold Registrant Recruitment">NEW COPY - Cold Registrant Recruitment</option>
+                        <option value="NEW COPY - Opt-in Registrant Recruitment">NEW COPY - Opt-in Registrant Recruitment</option>
+                        <option value="NEW COPY - Past Attendee Registrant Recruitment">NEW COPY - Past Attendee Registrant Recruitment</option>
                     </select>
                 </div>
             
@@ -139,7 +144,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - last edited on 7/15/21</div>
+        <div class="last-updated">BDI Virtual Content Engine - last edited on 10/21/21</div>
     </div>
 
     <svg id="backgroundDesign" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" preserveAspectRatio="xMidYMax slice" stroke-linejoin="round" stroke-miterlimit="1.41421" clip-rule="evenodd" viewBox="0 0 1920 1200">
