All new updates

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Virtual Content Engine - BDI</title>
     <link rel="icon" href="./assets/images/bdifavicon.png" type="image/x-icon"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <!-- Theme included stylesheets -->
     <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
@@ -99,9 +100,9 @@
                         <option value="Client Communication">Client Communication</option>
                         <option value="LinkedIn Campaigns">LinkedIn Campaigns</option>
 
-                        <option value="NEW COPY - Cold Registrant Recruitment">NEW COPY - Cold Registrant Recruitment</option>
-                        <option value="NEW COPY - Opt-in Registrant Recruitment">NEW COPY - Opt-in Registrant Recruitment</option>
-                        <option value="NEW COPY - Past Attendee Registrant Recruitment">NEW COPY - Past Attendee Registrant Recruitment</option>
+                        <option value="NEW COPY - Cold Registrant Recruitment">Cold Registrant Recruitment</option>
+                        <option value="NEW COPY - Opt-in Registrant Recruitment">Opt-in Registrant Recruitment</option>
+                        <option value="NEW COPY - Past Attendee Registrant Recruitment">Past Attendee Registrant Recruitment</option>
                     </select>
                 </div>
             
@@ -138,7 +139,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - last edited on 10/21/21</div>
+        <div class="last-updated">BDI Virtual Content Engine - last edited on 10/25/21</div>
     </div>
 
     <svg id="backgroundDesign" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" preserveAspectRatio="xMidYMax slice" stroke-linejoin="round" stroke-miterlimit="1.41421" clip-rule="evenodd" viewBox="0 0 1920 1200">
@@ -162,6 +163,7 @@
     <script src="https://momentjs.com/downloads/moment-timezone-with-data-1970-2030.min.js"></script> <!-- Moment Timezone with data -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> <!-- jQuery min -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/babel" src="./index.js"></script>
      <!-- <script src="https://d3js.org/d3.v5.min.js"></script>D3 -->
 </body>
