--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                         <option value="Registrant Communication">Registrant Communication</option>
                         <option value="Client Communication">Client Communication</option>
-                        <option value="LinkedIn Campaigns">LinkedIn Campaigns</option>
+                        <option value="LinkedIn Message Templates">LinkedIn Message Templates</option>
 
                         <option value="NEW COPY - Cold Registrant Recruitment">Cold Registrant Recruitment</option>
                         <option value="NEW COPY - Opt-in Registrant Recruitment">Opt-in Registrant Recruitment</option>
@@ -139,7 +139,7 @@
             </div>
         </div>
 
-        <div class="last-updated">BDI Virtual Content Engine - last edited on 11/10/21</div>
+        <div class="last-updated">BDI Virtual Content Engine - last edited on 11/19/21</div>
     </div>
 
     <svg id="backgroundDesign" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" preserveAspectRatio="xMidYMax slice" stroke-linejoin="round" stroke-miterlimit="1.41421" clip-rule="evenodd" viewBox="0 0 1920 1200">
